// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBackgroundImageAndStyle should return null for an undefined input 1`] = `
Object {
  "source": Object {
    "testUri": "../../../assets/challenge-progress/squirrel.png",
  },
  "style": Object {
    "bottom": 0,
    "height": 900,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "width": "100%",
  },
}
`;

exports[`getBackgroundImageAndStyle should return null for an undefined input 2`] = `
Object {
  "source": Object {
    "testUri": "../../../assets/challenge-progress/elephant.png",
  },
  "style": Object {
    "bottom": 0,
    "height": 900,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "width": "100%",
  },
}
`;

exports[`getBackgroundImageAndStyle should return null for an undefined input 3`] = `
Object {
  "source": Object {
    "testUri": "../../../assets/challenge-progress/bird.png",
  },
  "style": Object {
    "bottom": 0,
    "height": 1100,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "width": "100%",
  },
}
`;

exports[`getBackgroundImageAndStyle should return null for an undefined input 4`] = `
Object {
  "source": Object {
    "testUri": "../../../assets/challenge-progress/ostrich.png",
  },
  "style": Object {
    "bottom": 0,
    "height": 1000,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "width": "100%",
  },
}
`;
